--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="home-content">
       <h3>Welcome to</h3>
       <h1>AgriLearnNetwork</h1>
-      <h3>Your Agricultural Knowledge Hub <span class="multiple-text"></span></h3>
+      <h3>Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
 
     </div>
     <div class="home-img">
