--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AgriLearnNetwork</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+
   <link rel="stylesheet" href="style.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
@@ -198,21 +200,28 @@
         </form>
 
     </section>
-    <footer class="footer">
-      <div class="footer-text footer-left">
-        <p>Contact Us</p>
-        <p>Email-Id: AgriLearnNetwork@gmail.com</p>
-        </div>
-        <div class="footer-text footer-right">
-        <p>Copyright &copy; 2023 by AgriLearnNetwork| All Rights Reserved.</p>
-        </div>
-      </div>
-
-      <div class="footer-iconTop">
-        <a href="#home" ><i class='bx bx-up-arrow-alt'></i></a>
-      </div>
-
-    </footer>  
+   
+<footer>
+  <div class="contact-icons">
+    <a href="mailto:AgriLearnNetwork@gmail.com" target="AgriLearnNetwork@gmail.com">
+      <i class="fas fa-envelope"></i>
+      <span>AgriLearnNetwork@gmail.com</span>
+    </a>
+    <a href="https://www.linkedin.com/yourlinkedin" target="_blank">
+      <i class="fab fa-linkedin"></i>
+      <span>AgriLearnNetwork@gmail.com</span>
+    </a>
+    <a href="https://github.com/yourgithub" target="_blank">
+      <i class="fab fa-github"></i>
+      <span>AgriLearnNetwork@gmail.com</span>
+    </a>
+  </div>
+  <p> Copyright © 2023 by AgriLearnNetwork | All Rights Reserved.</p>
+  <div class="footer-iconTop" style="align-self: right;">
+    <a href="#home" ><i class='bx bx-up-arrow-alt'></i></a>
+  </div>
+</footer>
+  
     
 
   <script src="https://unpkg.com/scrollreveal"></script>
