Added peat control blog

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
         <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
       </div>
 
+      <div class="services-box">
+        <a href="https://starpestcontroluae.com/blog/how-to-control-pests-in-agriculture/">
+        <i class='bx bx-sun'></i>
+        <h3>Pest Control Techniques</h3></a>
+        <br>
+        <p>Delve into the vital link between pest management and agriculture, where farmers confront the persistent threat of pest damage. Discover diverse strategies empowering farmers to safeguard crops and foster sustainable food production. Explore innovative approaches that not only mitigate pest impact but also promote agricultural resilience.</p>
+      </div>
+
 </section>
 
 
