--- a/index.html
+++ b/index.html
@@ -93,6 +93,107 @@
         <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
       </div>
 
+
+      <div class="services-box">
+        <a href="">
+          <i class='bx bx-cloud'></i>
+          <h3>Sustainable Agriculture Research & Education (SARE)</h3>
+          <br>
+          <p>Explore different methods and techniques for sustainable agriculture, such as organic farming, permaculture, or agroforestry.</p>
+        </a>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Crop Rotation</h3></a>
+        <br>
+        <p>Discusses the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Seasonal Planting Guide</h3></a>
+        <br>
+        <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Soil Health and Management</h3></a>
+        <br>
+        <p>Covers topics related to soil fertility, soil testing, nutrient management, and techniques for improving soil health, such as composting and cover cropping.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Integrated Pest Management (IPM)</h3></a>
+        <br>
+        <p>Explains the principles of IPM and how farmers can use a combination of cultural, biological, and chemical methods to control pests while minimizing environmental impact.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Farming Technology</h3></a>
+        <br>
+        <p> Explore the latest advancements in agricultural technology, such as precision agriculture, drones, smart irrigation systems, and automated farm machinery.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-money'></i>
+        <h3>Farming Economics</h3></a>
+        <br>
+        <p>Discuss economic aspects of farming, including market trends, pricing strategies, financial management, and government policies affecting the agriculture sector.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Livestock Management</h3></a>
+        <br>
+        <p>Provide guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Agri-Tourism</h3></a>
+        <br>
+        <p>Explore opportunities for farmers to diversify their income through agri-tourism activities such as farm tours, farm stays, pick-your-own operations, or on-farm events.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Climate Change and Agriculture</h3></a>
+        <br>
+        <p>Discuss the impact of climate change on agriculture and strategies for adapting to changing weather patterns, such as drought-resistant crops, water conservation techniques, or climate-smart farming practices.</p>
+      </div>
+
+
+      <div class="services-box">
+        <a href="">
+        <i class='bx bx-sun'></i>
+        <h3>Crop Rotation</h3></a>
+        <br>
+        <p>Discuss the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield.</p>
+      </div>
+
+
 </section>
 
 
