Update HTML File

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header class="header">
-    <a href="#" class="logo">AgriLearnNetwork</a>
+    <a href="#" class="logo">AgriEasySite</a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
@@ -30,7 +30,7 @@
   <section class="home" id="home">
     <div class="home-content">
       <h3>Welcome to</h3>
-      <h1>AgriLearnNetwork</h1>
+      <h1>AgriEasyNetwork</h1>
       <h3>Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
 
     </div>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="about-content">
-      <h2 class="heading">About <span>AgriLearnNetwork</span></h2>
+      <h2 class="heading">About <span>AgriEasyNetwork</span></h2>
 
       <p>Agrilearn Network serves as an indispensable resource, offering farmers a holistic platform enriched with essential insights spanning the diverse landscape of agriculture. Delving into the core of farming practices, our platform provides detailed guidance on agriculture techniques, in-depth knowledge on seed varieties, recommendations for optimal tool usage, streamlined harvesting methods, best practices for sowing, and strategic farm management approaches. By encompassing a wide spectrum of topics, Agrilearn Network aims to empower farmers with the comprehensive understanding needed to navigate the complexities of modern agriculture successfully.
 
