--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   
   <section class="resource" id="Resource Library">
-    <h2 class="heading">Resource<span> Library</span></h2>
+    <h2 class="resource">Resource<span> Library</span></h2>
 
     <div class="portfolio-container">
 
