--- a/index.html
+++ b/index.html
@@ -87,44 +87,49 @@
 
       <div class="services-box">
         <a href="https://www.worldbank.org/en/topic/climate-smart-agriculture">
-        <i class='bx bx-sun'></i>
+        <i class='bx bx-droplet'></i>
         <h3>Climate Smart Agriculture</h3></a>
         <br>
-        <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
+        <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.
+        </p>
       </div>
 
 
       <div class="services-box">
-        <a href="">
-          <i class='bx bx-cloud'></i>
+        <a href="https://www.ucsusa.org/resources/what-sustainable-agriculture">
+          <i class='bx bx-wind'></i>
           <h3>Sustainable Agriculture Research & Education (SARE)</h3>
           <br>
-          <p>Explore different methods and techniques for sustainable agriculture, such as organic farming, permaculture, or agroforestry.</p>
+          <p>Explore different methods and techniques for sustainable agriculture, such as organic farming, permaculture, or agroforestry.
+            Explore the latest innovations and techniques in sustainable agriculture, including organic farming methods, permaculture, and regenerative agriculture.
+          </p>
         </a>
       </div>
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://rodaleinstitute.org/why-organic/organic-farming-practices/crop-rotations/">
+        <i class='bx bx-transfer-alt'></i>
         <h3>Crop Rotation</h3></a>
         <br>
-        <p>Discusses the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield.</p>
+        <p>Discusses the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield.
+          Delve into the importance of crop rotation in maintaining soil fertility and preventing pest and disease outbreaks. Discover various crop rotation methods, their benefits, and how they contribute to improving yield and reducing the reliance on chemical inputs in modern agricultural systems.
+        </p>
       </div>
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://plantic.in/learngrow/vegetable-growing-season-chart">
+        <i class='bx bx-cloud-rain'></i>
         <h3>Seasonal Planting Guide</h3></a>
         <br>
-        <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.</p>
+        <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.A seasonal planting guide serves as a roadmap for gardeners, offering invaluable insights into optimal planting times and techniques tailored to specific seasons</p>
       </div>
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://extension.psu.edu/managing-soil-health-concepts-and-practices">
+        <i class='bx bx-heart-circle'></i>
         <h3>Soil Health and Management</h3></a>
         <br>
         <p>Covers topics related to soil fertility, soil testing, nutrient management, and techniques for improving soil health, such as composting and cover cropping.</p>
@@ -132,8 +137,8 @@
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://www.epa.gov/safepestcontrol/integrated-pest-management-ipm-principles">
+        <i class='bx bx-spray-can'></i>
         <h3>Integrated Pest Management (IPM)</h3></a>
         <br>
         <p>Explains the principles of IPM and how farmers can use a combination of cultural, biological, and chemical methods to control pests while minimizing environmental impact.</p>
@@ -141,8 +146,8 @@
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://eos.com/blog/agricultural-technology/#:~:text=Agricultural%20technology%2C%20also%20known%20as,%2C%20mobile%20devices%2C%20and%20software.">
+        <i class='bx bx-laptop'></i>
         <h3>Farming Technology</h3></a>
         <br>
         <p> Explore the latest advancements in agricultural technology, such as precision agriculture, drones, smart irrigation systems, and automated farm machinery.</p>
@@ -150,7 +155,7 @@
 
 
       <div class="services-box">
-        <a href="">
+        <a href="https://www.britannica.com/money/agricultural-economics">
         <i class='bx bx-money'></i>
         <h3>Farming Economics</h3></a>
         <br>
@@ -159,8 +164,8 @@
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://icar.org.in/sites/default/files/inline-files/livestock-management-AR-2011-12_2.pdf">
+        <i class='bx bx-face'></i>
         <h3>Livestock Management</h3></a>
         <br>
         <p>Provide guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
@@ -168,31 +173,15 @@
 
 
       <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
+        <a href="https://nationalaglawcenter.org/overview/agritourism/">
+        <i class='bx bx-map'></i>
         <h3>Agri-Tourism</h3></a>
         <br>
         <p>Explore opportunities for farmers to diversify their income through agri-tourism activities such as farm tours, farm stays, pick-your-own operations, or on-farm events.</p>
       </div>
 
 
-      <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
-        <h3>Climate Change and Agriculture</h3></a>
-        <br>
-        <p>Discuss the impact of climate change on agriculture and strategies for adapting to changing weather patterns, such as drought-resistant crops, water conservation techniques, or climate-smart farming practices.</p>
-      </div>
-
-
-      <div class="services-box">
-        <a href="">
-        <i class='bx bx-sun'></i>
-        <h3>Crop Rotation</h3></a>
-        <br>
-        <p>Discuss the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield.</p>
-      </div>
-
+     
 
 </section>
 
