--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <i class='bx bx-cloud-rain'></i>
         <h3>Seasonal Planting Guide</h3></a>
         <br>
-        <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.A seasonal planting guide serves as a roadmap for gardeners, offering invaluable insights into optimal planting times and techniques tailored to specific seasons</p>
+        <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.A seasonal planting guide serves as a roadmap for gardeners, offering invaluable insights into optimal planting times and techniques tailored to specific seasons.By following such a guide, gardeners can optimize their efforts and cultivate thriving gardens year-round.</p>
       </div>
 
 
@@ -139,7 +139,7 @@
       <div class="services-box">
         <a href="https://www.epa.gov/safepestcontrol/integrated-pest-management-ipm-principles">
         <i class='bx bx-spray-can'></i>
-        <h3>Integrated Pest Management (IPM)</h3></a>
+        <h3>Integrated Pest Management</h3></a>
         <br>
         <p>Explains the principles of IPM and how farmers can use a combination of cultural, biological, and chemical methods to control pests while minimizing environmental impact.</p>
       </div>
@@ -159,7 +159,7 @@
         <i class='bx bx-money'></i>
         <h3>Farming Economics</h3></a>
         <br>
-        <p>Discuss economic aspects of farming, including market trends, pricing strategies, financial management, and government policies affecting the agriculture sector.</p>
+        <p>Discusses economic aspects of farming, including market trends, pricing strategies, financial management, and government policies affecting the agriculture sector.</p>
       </div>
 
 
@@ -168,7 +168,7 @@
         <i class='bx bx-face'></i>
         <h3>Livestock Management</h3></a>
         <br>
-        <p>Provide guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
+        <p>Provides guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
       </div>
 
 
