--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>AgriLearnNetwork</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" />
+  
+  <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
     crossorigin="anonymous"></script>
@@ -19,16 +24,17 @@
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#Farm Management">Blogs</a>
-      <a href="#Resource Library">Resource Library</a>
+      <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+      <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
+      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
+      <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
 
     </nav>
   </header>
 
   <section class="home" id="home">
     <div class="home-content">
+      
       <h3>Welcome to</h3>
       <h1>AgriLearnNetwork</h1>
       <h3>Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
