--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 </head>
 
 <body>
+  
   <header class="header">
-    <a href="#" class="logo">AgriLearnNetwork</a>
+    <img src="images/logoImg.png" style="width:10%; height: auto; max-width:80px; " class="logoImg">
+    <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
+      
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
