--- a/index.html
+++ b/index.html
@@ -202,7 +202,16 @@
           <input type="text" placeholder="Email Subject">
         </div>
 
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        
+		<br>
+
+        <textarea  name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+		<br>
+		<br>
+		
+		<label> Choose the file to upload: </label>
+		<input type="file" id="myFile" /> <br /><br />
+
         <input type="submit" value="Send Message" class="btn"> 
 
         </form>
