removed unnecessary drop down in mobile number
removed unnecessary drop down in mobile number

--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
         <form action="#">
 
         <div class="input-box">
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email Address">
+          <input type="text" placeholder="Full Name" required>
+          <input type="email" placeholder="Email Address" required>
         </div>
 
         <div class="input-box">
-          <input type="Number" placeholder="Mobile Number">
-          <input type="text" placeholder="Email Subject">
+          <input type="number" placeholder="Mobile Number" max="15" min="5" required>
+          <input type="text" placeholder="Email Subject" required>
         </div>
 
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <input type="submit" value="Send Message" class="btn"> 
 
         </form>
