--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
 
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" max="15" min="5" required>
+          <input type="number" placeholder="Mobile Number" required>
           <input type="text" placeholder="Email Subject" required>
         </div>
 
