HOVER EFFECT ON CONTACT US
Successfully added hover effect + some additional styling

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     </section>
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Us!</span></h2>
+      <input type="submit" value="Send Message" class="btn">
         <form action="#">
 
         <div class="input-box">
