navbar and hero section fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
   </header>
 
-  <section class="home" id="home">
+  <section class="home">
     <div class="home-content">
       
       <h3>Welcome to</h3>
