--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="about-content">
       <h2 class="heading">About <span>AgriLearnNetwork</span></h2>
 
-      <p>Agrilearn Network serves as an indispensable resource, offering farmers a holistic platform enriched with essential insights spanning the diverse landscape of agriculture. Delving into the core of farming practices, our platform provides detailed guidance on agriculture techniques, in-depth knowledge on seed varieties, recommendations for optimal tool usage, streamlined harvesting methods, best practices for sowing, and strategic farm management approaches. By encompassing a wide spectrum of topics, Agrilearn Network aims to empower farmers with the comprehensive understanding needed to navigate the complexities of modern agriculture successfully.
+      <p>AgriLearnNetwork serves as an indispensable resource, offering farmers a holistic platform enriched with essential insights spanning the diverse landscape of agriculture. Delving into the core of farming practices, our platform provides detailed guidance on agriculture techniques, in-depth knowledge on seed varieties, recommendations for optimal tool usage, streamlined harvesting methods, best practices for sowing, and strategic farm management approaches. By encompassing a wide spectrum of topics, Agrilearn Network aims to empower farmers with the comprehensive understanding needed to navigate the complexities of modern agriculture successfully.
 
       </p>
 
@@ -236,7 +236,7 @@
 
       
       <div class="footer-text footer-right">
-        <p>Copyright &copy; 2023 by AgriLearnNetwork| All Rights Reserved.</p>
+        <p>Copyright &copy; 2024 by AgriLearnNetwork | All Rights Reserved.</p>
         </div>
     </footer>  
     
