--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
       
       <div class="footer-text footer-right">
-        <p>Copyright &copy; 2023 by AgriLearnNetwork| All Rights Reserved.</p>
+        <p style="font-weight: 600; font-size: 20px;">Copyright &copy; 2023 by AgriLearnNetwork | All Rights Reserved.</p>
         </div>
     </footer>  
     
