Added Soil Type Blog and Improving Soil Quality Resource
Added a new blog about the importance of soil in agriculture. Added a resource (YouTube video) about improving soil quality in the Resource library.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
         <i class='bx bx-sun'></i>
         <h3>Climate Smart Agriculture</h3></a>
         <br>
-        <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
+        <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events. Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
+      </div>
+
+      <div class="services-box">
+        <a href="https://advancepesticides.com/blog/agricultural-soil-types-formation-characteristics-importance/">
+        <i class='bx bxs-coffee-bean'></i>
+        <h3>Soil Type</h3></a>
+        <br>
+        <p>Learn and discover about the importance of soil in agriculture. Discover how the type of soil effects the growth of the plant and the overall yield of crop. Understanding soil characteristics and implementing appropriate management strategies are essential for maximizing yields, conserving soil resources, and ensuring the long-term viability of agricultural systems.</p>
       </div>
 
 </section>
@@ -184,6 +192,14 @@
           <h4>Climate smart Farming</h4>
 
           <a href="https://youtu.be/g0wkT3mf80U?si=I9VfWYFumZW03lnB"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/identify-soil-type.jpg.webp" alt="PROJECT-IMG" />
+        <div class="portfolio-layer">
+          <h4>Improving Soil Quality</h4>
+          <a href="https://youtu.be/WpKwlkXA8zA?si=3UI5eSSTYlKqA8w4"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
 
