--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+      <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
 
     </nav>
   </header>
@@ -39,9 +40,9 @@
   <section class="home" id="home">
     <div class="home-content">
       
-      <h3>Welcome to</h3>
-      <h1>AgriLearnNetwork</h1>
-      <h3>Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
+      <h3 class="home--welcome">Welcome to</h3>
+      <h1 class="home--welcome">AgriLearnNetwork</h1>
+      <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
 
     </div>
     <div class="home-img">
