--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 
   <section class="farm" id="Farm Management">
     <h2 class="heading">Agro<span>Blogs</span></h2>
+   
 
     <div class="services-container">
-
+      <div class="blogs-list">
       <div class="services-box">
         <a href="https://tractorkarvan.com/blog/how-to-sow-seeds">
             <i class='bx bx-leaf'></i>
@@ -93,7 +94,32 @@
         <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
       </div>
 
+        <div class="services-box">
+          <a href="https://tractorkarvan.com/blog/how-to-sow-seeds">
+              <i class='bx bx-leaf'></i>
+              <h3>Sowing Techniques</h3></a>
+              <p>Uncover the significance of precise seed placement, optimal spacing, and appropriate depth in enhancing crop yields. From promoting germination to managing weeds and pests, explore the critical aspects of sowing that shape successful cultivation. Glean valuable insights into modern sowing practices and cultivate a deeper understanding of this fundamental process in agriculture. </p>
+          
+      </div>
+
+      <div class="services-box">
+        <a href="https://www.groundsguys.com/blog/2015/july/irrigation-different-techniques-and-benefits/">
+        <i class='bx bx-water'></i>
+        <h3>Irrigation Techniques</h3></a>
+        <p>Learn about the crucial role of precise watering methods, optimal distribution, and strategic timing in nurturing thriving crops. From supporting germination to efficient water management, uncover essential aspects that contribute to successful cultivation. Gain valuable insights into modern irrigation practices, offering a deeper understanding of this fundamental process in agriculture. </p>
+
+      </div>
+
+      <div class="services-box">
+        <a href="https://www.worldbank.org/en/topic/climate-smart-agriculture">
+        <i class='bx bx-sun'></i>
+        <h3>Climate Smart Agriculture</h3></a>
+        <br>
+        <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
+      </div>
+    
 </section>
+</div>
 
 
   
