updated form validation.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </section>
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
-        <form action="#">
+        <form id="contact-form" action="#">
 
         <div class="input-box">
           <input type="text" placeholder="Full Name" required>
@@ -250,6 +250,7 @@
 
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script src="https://mediafiles.botpress.cloud/43c4d3ec-a251-474f-8cce-3d8737805a57/webchat/config.js" defer></script>
+
 </body>
 
 </html>
