--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <img src="images/25803500_1621011873.jpg" alt="PROJECT-IMG" border="0" />
         <div class="portfolio-layer">
           <h4>Sowing Techniques</h4>
-          <a href="https://www.youtube.com/watch?v=Z3HApiFKwb4&pp=ygUdc293aW5nIHRlY2huaXF1ZXMgYWdyaWN1bHR1cmU%3D" target="_blank"><i
+          <a href="https://www.youtube.com/watch?v=tYYKH7bxCYg" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
