adding favicon icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
     crossorigin="anonymous"></script>
+    <link rel="icon" href="./plant.png" type="'image/png">
 </head>
 
 <body>
