--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
     </section>
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
-        <form action="#">
-
+        <form action="#" id="contact-form">
         <div class="input-box">
           <input type="text" placeholder="Full Name" required>
           <input type="email" placeholder="Email Address" required>
@@ -204,7 +203,7 @@
         </div>
 
         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <input type="submit" value="Send Message" class="btn"> 
+        <input type="submit" value="Send Message" class="btn" id="contact-btn"> 
 
         </form>
 
