--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <footer class="footer">
       <div class="footerUpperPart">
         <div class="footer-left">
-          <p>Contact Us</p>
+          <p>Follow us on our socials:</p>
           <div class="socialIcons">
             
 
