--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-AfY3ZyoP3T5NjqkcmfT1G7iZnzs7MlB/dkt9h7oI4QltT1teoD9DJcYqmx5gERZ7" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -33,6 +35,7 @@
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+      <a href="login.html" id="nav--contact"><i class="fas fa-sign-in-alt"></i> Login/SignUp</a>
 
     </nav>
   </header>
