--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
         <img src="images/25803500_1621011873.jpg" alt="PROJECT-IMG" border="0" />
         <div class="portfolio-layer">
           <h4>Sowing Techniques</h4>
-          <a href="https://www.youtube.com/watch?v=Z3HApiFKwb4&pp=ygUdc293aW5nIHRlY2huaXF1ZXMgYWdyaWN1bHR1cmU%3D" target="_blank"><i
+          <a href="https://youtu.be/xIe2EjQNols?si=3ZilfnJPM2t3jyYH"><i
               class='bx bx-link-external'></i></a>
+            <!-- Updated the video link -->
         </div>
       </div>
       <div class="portfolio-box">
