--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
       <h3 class="home--welcome">Welcome to</h3>
       <h1 class="home--welcome">AgriLearnNetwork</h1>
-      <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
+      <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text" style="color:black;"></span></h3>
 
     </div>
     <div class="home-img">
