--- a/index.html
+++ b/index.html
@@ -340,7 +340,26 @@
   <script src="script.js"></script>
 
   <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/1b0ac763-18d0-4394-b958-99cb291e815a/webchat/config.js" defer></script>
+  <script>
+    window.botpressWebChat.init({
+        "composerPlaceholder": "Chat with Agri Bot",
+        "botConversationDescription": "This chatbot was built surprisingly fast with Botpress",
+        "botId": "1b0ac763-18d0-4394-b958-99cb291e815a",
+        "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+        "messagingUrl": "https://messaging.botpress.cloud",
+        "clientId": "1b0ac763-18d0-4394-b958-99cb291e815a",
+        "webhookId": "4eaa7559-3428-4689-90c4-786a70c0b870",
+        "lazySocket": true,
+        "themeName": "prism",
+        "botName": "Agri Bot",
+        "stylesheet": "https://webchat-styler-css.botpress.app/prod/0ae41023-8538-44c1-8091-f7f0fb394060/v66819/style.css",
+        "frontendVersion": "v1",
+        "showPoweredBy": true,
+        "theme": "prism",
+        "themeColor": "#2563eb"
+    });
+  </script>
+  
 </body>
 
 </html>
