--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
   
   <header class="header">
+    <img src="images/ALN_logo.png" alt="logo">
     <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
