--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   </header>
 
   <section class="home" id="home">
-    <div class="home-content">
+    <div class="home-content" style="padding-left: 45%;">
       
       <h3 class="home--welcome">Welcome to</h3>
       <h1 class="home--welcome">AgriLearnNetwork</h1>
-      <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
+      <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text" style="color:red;"></span></h3>
 
     </div>
-    <div class="home-img">
+    <!--<div class="home-img">
       <img src="images/Screenshot 2023-12-26 165533.png" alt="MY-IMAGE" />
-    </div>
+    </div>-->
   </section>
 
 
