--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 <body>
   
   <header class="header">
-    <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
-
+    <div class="logo">
+      <img src="C:\Users\Shambhavi\Downloads\Screenshot_2024-05-12_210805-removebg-preview.png" alt="Logo 1">
+      <img src="C:\Users\Shambhavi\Downloads\Screenshot_2024-05-12_210705-removebg-preview.png" alt="Logo 2">
+    </div>
+  
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
-      
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
-      <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
-      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
-      <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+      <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
+      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i> Blogs</a>
+      <a href="#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
-
     </nav>
   </header>
+
 
   <section class="home" id="home">
     <div class="home-content">
