Added GitHub icons to it.
Added GitHub icons to it.
It will help user to review the code.

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://twitter.com/your_username_here" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a>
-  
+            <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-github"></i></a>
   
           </div>
          
