contact page enhanced

--- a/index.html
+++ b/index.html
@@ -283,19 +283,23 @@
     </section>
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
+      
         <form action="#" id="contact-form">
         <div class="input-box">
-          
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email Address" required>
+          <i class='icon-1 bx bxs-user' style="font-size: 30px;"></i>
+          <input type="text" class="formcontrol" placeholder="Full Name" style="padding-left:10%;" required>
+          <i class='icon-2 bx bxl-gmail' style="font-size: 30px;"></i>
+          <input type="email" placeholder="Email Address" style="padding-left:10%;" required>
         </div>
 
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" required>
-          <input type="text" placeholder="Email Subject" required>
+          <i class='icon-3 bx bxs-phone-call' style="font-size:30px;"></i>
+          <input type="number" placeholder="Mobile Number" style="padding-left:10%;" required>
+          <i class='icon-4 bx bxs-envelope' style="font-size: 30px;"></i>
+          <input type="text" placeholder="Email Subject" style="padding-left:10%;" required>
         </div>
-
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <i class='icon-5 bx bxs-message-rounded-dots' style="font-size: 30px;"></i>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required style="padding-left:10%;"></textarea>
         <input type="submit" value="Send Message" class="btn" id="contact-btn"> 
 
         </form>
