--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
         <br>
         <p>Explore opportunities for farmers to diversify their income through agri-tourism activities such as farm tours, farm stays, pick-your-own operations, or on-farm events.</p>
       </div>
+      
+    </div>
 
 
 </section>
