--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
     crossorigin="anonymous"></script>
     <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png">
+    <style>
+      @keyframes float {
+        0% {
+          transform: translateY(0);
+        }
+    
+        50% {
+          transform: translateY(-10px);
+        }
+    
+        100% {
+          transform: translateY(0);
+        }
+      }
+    </style>
 </head>
 
 <body>
@@ -65,7 +80,7 @@
 
   <section class="about" id="about">
     <div class="about-img">
-      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" />
+      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" style="animation: float 2s ease-in-out infinite;"/>
 
     </div>
 
