--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png">
 </head>
 
+<style>
+  @keyframes float {
+    0% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(-10px);
+    }
+
+    100% {
+      transform: translateY(0);
+    }
+  }
+</style>
 <body>
   
   <header class="header">
@@ -65,7 +80,7 @@
 
   <section class="about" id="about">
     <div class="about-img">
-      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" />
+      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" style="animation: float 1.5s ease-in-out infinite;" />
 
     </div>
 
