added new logo in navbar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
   
   <header class="header">
+    <img src="images/favicon1.png" alt="logo">
     <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
