--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" />
   
-  <link rel="icon" href="./images/favicon1.png" type="image/x-icon">
+  <link rel="icon" href="images/favicon3.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
 <body>
   
   <header class="header">
-    <img src="images/favicon1.png" alt="logo">
+    <img src="images/favicon3.png" alt="logo">
     <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
