added new logo in navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
     crossorigin="anonymous"></script>
-    <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png">
+    <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
 </head>
 
 <body>
