--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
   
   <header class="header">
-    <img src="images/favicon.png" alt="logo">
-    <a href="#" class="logo" style="margin-inline-end:auto;">AgriLearnNetwork  </a>
+    <img src="images/favicon.png" alt="logo" style="height:50px; width:50px; margin-right:10px;" >
+    <a href="#" class="logo" style="margin-inline-end:auto;"><h3>AgriLearnNetwork</h3>  </a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
@@ -84,6 +84,8 @@
 
   <section class="farm" id="Farm Management">
     <h2 class="heading">Agro<span>Blogs</span></h2>
+    <br>
+    <br>
      <div class="services-container">
       <div class="services-box" onclick="window.location.href='https://tractorkarvan.com/blog/how-to-sow-seeds';">
         <i class='bx bx-leaf'></i>
