--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+  <div class="progress-bar">
+    <div class="filled"></div>
+  </div>
   
   <header class="header">
     <img src="images/favicon.png" alt="logo">
