--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <h2>AgriLearnNetwork</h2>
     </div>
     <div class="footer-icons">
-      <p>Follow us on our socials:</p>
+      <p><b>Follow us on our socials:</b></p>
       <div class="socialIcons">
         <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i class="fas fa-envelope"></i></a>
         <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -354,6 +354,16 @@
     <div class="footer-iconTop">
       <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
     </div>
+  </div>
+  <div class="quick-links">
+    <h2>Quick Links</h2>
+    <ul>
+      <li><a href="#home"><p>Home</p></a></li>
+      <li><a href="#about"><p>About Us</p></a></li>
+      <li><a href="#Farm Management"><p>Blogs</p></a></li>
+      <li><a href="#Resource Library"><p>Resource Library</p></a></li>
+      <li><a href="#contact"><p>Contact Us</p></a></li>
+    </ul>
   </div>
   <div class="footer-text footer-right">
     <p style="font-weight: 600; font-size: 15px;">Copyright &copy; <script>document.write(new Date().getFullYear())</script> by AgriLearnNetwork | All Rights Reserved.</p>
