--- a/index.html
+++ b/index.html
@@ -249,8 +249,18 @@
   <!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script src="https://mediafiles.botpress.cloud/1cfb7415-d4fc-4477-8d00-3717d30c975b/webchat/config.js" defer></script> -->
 
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/43c4d3ec-a251-474f-8cce-3d8737805a57/webchat/config.js" defer></script>
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "2YyBBIJqDa2C3JwuBu-Ez",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="2YyBBIJqDa2C3JwuBu-Ez"
+  domain="www.chatbase.co"
+  defer>
+  </script>
 </body>
 
 </html>
