--- a/index.html
+++ b/index.html
@@ -356,7 +356,19 @@
   <!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script src="https://mediafiles.botpress.cloud/1cfb7415-d4fc-4477-8d00-3717d30c975b/webchat/config.js" defer></script> -->
 
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script> -->
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "2YyBBIJqDa2C3JwuBu-Ez",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="2YyBBIJqDa2C3JwuBu-Ez"
+  domain="www.chatbase.co"
+  defer>
+  </script>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -384,7 +396,7 @@
 });
 </script>
 <!-- <script src="https://mediafiles.botpress.cloud/43c4d3ec-a251-474f-8cce-3d8737805a57/webchat/config.js" defer></script> -->
-<script async data-id="6114274622" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+<!-- <script async data-id="6114274622" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script> -->
 </body>
 
 </html>
