scroll-up button added

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
     </div>
-    <div class="footer-iconTop">
+    <div class="scroll-to-top">
       <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
     </div>
   </div>
