Add the animated background in the about section

--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
 
 
   <section class="about" id="about">
-    <div class="about-img">
-      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" />
-
-    </div>
-
-    </div>
+    <div class="about-container">
+    <video class="about-video" autoplay loop muted>
+      <source src="./images/video.mp4" type="video/mp4">
+    </video>
 
     <div class="about-content">
       <h2 class="heading">About <span>AgriLearnNetwork</span></h2>
@@ -80,6 +78,7 @@
 
       </p>
 
+    </div>
     </div>
   </section>
 
