Add the video behind the about section and raindrop animation throughout the page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   </section>
 
   <section class="farm" id="Farm Management">
+    <div class="rain"></div>
     <h2 class="heading">Agro<span>Blogs</span></h2>
 
     <br>
@@ -188,6 +189,7 @@
 
   
   <section class="resource" id="Resource Library">
+    <div class="rain">
     <h2 class="heading">Resource<span> Library</span></h2>
 
     <div class="portfolio-container">
@@ -287,7 +289,7 @@
         <input type="submit" value="Send Message" class="btn" id="contact-btn"> 
 
         </form>
-     
+     </div> 
     </section>
 
 <!-- Modal  -->
