Added icons in the footer links

--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
   <div class="quick-links">
     <h2>Quick Links</h2>
     <ul>
-      <li><a href="#home"><p>Home</p></a></li>
-      <li><a href="#about"><p>About Us</p></a></li>
-      <li><a href="#Farm Management"><p>Blogs</p></a></li>
-      <li><a href="#Resource Library"><p>Resource Library</p></a></li>
-      <li><a href="#contact"><p>Contact Us</p></a></li>
+      <li><a href="#home"><p><i class="fa-solid fa-house"></i> Home</p></a></li>
+      <li><a href="#about"><p><i class="fa-solid fa-circle-info"></i> About Us</p></a></li>
+      <li><a href="#Farm Management"><p><i class="fa-solid fa-blog"></i> Blogs</p></a></li>
+      <li><a href="#Resource Library"><p><i class="fa-solid fa-book"></i> Resource Library</p></a></li>
+      <li><a href="#contact"><p><i class="fa-solid fa-phone"></i> Contact Us</p></a></li>
     </ul>
   </div>
   <div class="footer-text footer-right">
