--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <div class="socialIcons">
         <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i class="fas fa-envelope"></i></a>
         <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/your_username_here" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
     </div>
