Revert "made changes in navbar section - allignment  resolving issue #301"

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
       
-      <a href="#home" class="active" style="font-size: 1.6rem;"><i class="fa-solid fa-house"></i> Home</a>
-      <a href="#about" style="font-size: 1.6rem;"><i class="fa-solid fa-circle-info"></i>  About</a>
-      <a href="#Farm Management"style="font-size: 1.6rem;" > <i class="fa-solid fa-blog"></i>  Blogs</a>
-      <a href="#Resource Library" style="font-size: 1.6rem;"><i class="fa-solid fa-book"></i>  Resource Library</a>
-      <a href="#contact" style="font-size: 1.6rem;" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+      <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+      <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
+      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
+      <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+      <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
 
     </nav>
   </header>
