--- a/index.html
+++ b/index.html
@@ -66,20 +66,24 @@
 
 
   <section class="about" id="about">
-    <div class="about-img">
+    <!-- <div class="about-img">
       <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" />
 
+    </div> -->
+    <div class="video-wrapper">
+      <video autoplay muted loop id="aboutVideo">
+        <source src="Agriculturevideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
-
-    </div>
-
+    <div class="overlay">
     <div class="about-content">
       <h2 class="heading">About <span>AgriLearnNetwork</span></h2>
-
       <p>Agrilearn Network serves as an indispensable resource, offering farmers a holistic platform enriched with essential insights spanning the diverse landscape of agriculture. Delving into the core of farming practices, our platform provides detailed guidance on agriculture techniques, in-depth knowledge on seed varieties, recommendations for optimal tool usage, streamlined harvesting methods, best practices for sowing, and strategic farm management approaches. By encompassing a wide spectrum of topics, Agrilearn Network aims to empower farmers with the comprehensive understanding needed to navigate the complexities of modern agriculture successfully.
 
       </p>
-
+      
+    </div>
     </div>
   </section>
 
