--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
     </div> -->
     <div class="video-wrapper">
-      <video autoplay muted loop id="aboutVideo">
+      <div class="video-overlay"></div>
+      <video class="background-video" autoplay muted loop id="aboutVideo">
         <source src="Agriculturevideo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -82,7 +83,7 @@
       <p>Agrilearn Network serves as an indispensable resource, offering farmers a holistic platform enriched with essential insights spanning the diverse landscape of agriculture. Delving into the core of farming practices, our platform provides detailed guidance on agriculture techniques, in-depth knowledge on seed varieties, recommendations for optimal tool usage, streamlined harvesting methods, best practices for sowing, and strategic farm management approaches. By encompassing a wide spectrum of topics, Agrilearn Network aims to empower farmers with the comprehensive understanding needed to navigate the complexities of modern agriculture successfully.
 
       </p>
-      
+
     </div>
     </div>
   </section>
