Changed the font size of text for mobile screens.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     </nav>
   </header>
-
+  
   <section class="home" id="home">
+    <div class="carousel">
     <div class="slider">
       <div class="home-content">
         <h3 class="home--welcome">Welcome to</h3>
@@ -48,22 +49,19 @@
         <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
   
       </div>
-      <div class="slide_viewer">
-        <div class="slide_group">
-          <div class="slide" style="background-image: url(./images/carousel-img-2.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-1.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-3.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-4.jpg)"></div>
-          <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
+      
+        <div class="slide_viewer">
+          <div class="slide_group">
+            <div class="slide" style="background-image: url(./images/carousel-img-2.jpg)"></div>
+            <div class="slide" style="background-image: url(./images/carousel-img-1.jpg)"></div>
+            <div class="slide" style="background-image: url(./images/carousel-img-3.jpg)"></div>
+            <div class="slide" style="background-image: url(./images/carousel-img-4.jpg)"></div>
+            <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
+          </div>
         </div>
       </div>
+      </section>
     </div>
-    
-
-  </section>
-
-
-
 
   <section class="about" id="about">
     <!-- <div class="about-img">
